# ImageSegmentationQualityEvaluator

./: CMakeLists.txt  HausdorffDistanceComputer.cxx  LabelOverlapComputer.cxx  README.md  image_loader.h  image_loader.hxx  itkMaskedLabelOverlapMeasuresImageFilter.h  itkMaskedLabelOverlapMeasuresImageFilter.hxx
test/: generate_test_files.sh
